--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: java # to trigger the build on a 'jvm-otp' travis worker
 env:
-  - PLAY_VERSION=2.1.0
+  - ACTIVATOR_VERSION=1.2.12 \
+    ACTIVATOR_ZIP_FILE=typesafe-activator-${ACTIVATOR_VERSION}-minimal.zip
 before_script:
-  - wget http://downloads.typesafe.com/play/${PLAY_VERSION}/play-${PLAY_VERSION}.zip
-  - unzip -q play-${PLAY_VERSION}.zip
+  - wget http://downloads.typesafe.com/typesafe-activator/${ACTIVATOR_VERSION}/${ACTIVATOR_ZIP_FILE}
+  - unzip -q ${ACTIVATOR_ZIP_FILE}
   - set SBT_OPTS= -Xms256m Xmx52m -XX:MaxPermSize=512m
-script: play-${PLAY_VERSION}/play test
+script:
+  - activator-${ACTIVATOR_VERSION}-minimal/activator test
