--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -23,7 +23,26 @@ roles:
         id:             2
         name:           member
         active:         true
-
+    - !!models.Role
+        id:             3
+        name:           sitemanager
+        active:         true
+    - !!models.Role
+        id:             4
+        name:           anonymous
+        active:         true
+    - !!models.Role
+        id:             5
+        name:           guest
+        active:         true
+    - !!models.Role
+        id:             6
+        name:           org_admin
+        active:         true
+    - !!models.Role
+        id:             7
+        name:           org_member
+        active:         true
 # Labels
 labels:
     - !!models.Label
