--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -1,11 +1,11 @@
 # Users
 users:
     - !!models.User
-        name:           Site admin
+        name:           Site Admin
         loginId:        admin
         password:       5v4TVjzLo1bqullT1CU4/bENUNOUfX97WpdunGLvJvw=
         passwordSalt:   '[B@1032a4'
-        email:          admin@nhn.com
+        email:          project.yona@gmail.com
         createdDate:           2012-11-01 08:00:00
 
 siteAdmins:
